# thanatos

./: .gitignore  CHANGELOG.md  README.md  agent_capabilities.json
Payload_Type/thanatos/: Dockerfile
Payload_Type/thanatos/.docker/: config.toml
Payload_Type/thanatos/thanatos/agent_code/: Cargo.toml  build.rs  libwinapi_resolve.rlib  test_build  test_build.rs
Payload_Type/thanatos/thanatos/agent_code/.cargo/: config.toml
Payload_Type/thanatos/thanatos/agent_code/resources/: app.manifest  app.rc
Payload_Type/thanatos/thanatos/agent_code/src/: agent.rs  askcreds.rs  browser_cookies.rs  c2manage.rs  cat.rs  cd.rs  cleanup.rs  clipboard.rs  coffloader.rs  collection.rs  cp.rs  credentials.rs  discovery.rs  download.rs  eclipse.rs  evasion.rs  execute.rs  exit.rs  getenv.rs  getprivs.rs  iat_pad.rs  jobs.rs  lateral.rs  ldap.rs  legitimacy.rs  lib.rs  main.rs  minifilter.rs  mkdir.rs  mv.rs  netstat.rs  ntfs_read.rs  obfstr.rs  padding.rs  persist.rs  polymorphism.rs  portfwd.rs  portscan.rs  pwd.rs  redirect.rs  (+15 more)
Payload_Type/thanatos/thanatos/agent_code/src/ls/: mod.rs
Payload_Type/thanatos/thanatos/agent_code/src/profiles/: http.rs  mod.rs
Payload_Type/thanatos/thanatos/agent_code/src/ps/: mod.rs
Payload_Type/thanatos/thanatos/agent_code/src/ssh/: agent.rs  cat.rs  download.rs  exec.rs  ls.rs  mod.rs  rm.rs  spawn.rs  upload.rs
Payload_Type/thanatos/thanatos/agent_code/src/utils/: windows.rs
Payload_Type/thanatos/thanatos/mythic/agent_functions/: askcreds.py  browser_cookies.py  builder.py  c2manage.py  cd.py  cleanup.py  clipboard.py  collection.py  cp.py  credentials.py  discovery.py  download.py  eclipse_cmd.py  evasion.py  execute.py  exit.py  fork_and_run.py  getenv.py  getprivs.py  jobkill.py  jobs.py  lateral.py  ldap.py  ls.py  minifilter.py  mkdir.py  mv.py  netstat.py  ntfs_read.py  persist.py  portfwd.py  portscan.py  powershell.py  ps.py  pwd.py  redirect.py  rm.py  screenshot.py  setenv.py  shell.py  (+11 more)
Payload_Type/thanatos/thanatos/mythic/browser_scripts/: screenshot.js
documentation-payload/thanatos/commands/: _index.md  amsi_patch.md  askcreds.md  bof.md  browser_cookies.md  browser_creds.md  c2info.md  cleanup.md  clipboard.md  credentials_dump.md  domain_computers.md  domain_info.md  domain_users.md  etw_patch.md  eventlog_clear.md  execute_assembly.md  keylogger_start.md  keylogger_stop.md  killdate.md  ldap_search.md  minifilter_evade.md  net_loggedon.md  net_sessions.md  net_shares.md  ntfs_read.md  persist_registry.md  persist_schtask.md  persist_service.md  persist_wmi.md  portfwd.md  psexec.md  screenshot.md  shinject.md  socks.md  stealth_sleep.md  timestomp.md  token_list.md  token_make.md  token_revert.md  token_steal.md  (+5 more)
