[workspace]
members = ["shared"]

[package]
name = "thanatos"
version = "0.1.14"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"

[profile.release]
strip = "symbols"

[features]
default = ["purple_team"]
evasion = ["dinvoke_rs", "unwinder", "shelter", "eclipse"]
advanced_collection = ["mftool"]
minifilter_evasion = ["puzzle"]
purple_team = ["evasion", "advanced_collection", "minifilter_evasion"]

[dependencies]
# === Core serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Image / capture helpers ===
# Para convertir el bitmap a JPEG en memoria

# === SOCKS + base64 queue ===
base64 = "0.21.7"
once_cell = "1.19"

# === Cryptography & encoding ===
aes = "0.7"
block-modes = "0.8"
hmac = "0.11"
sha2 = "0.9"

# === Miscellaneous ===
cfg-if = "1.0.0"
chrono = "0.4"
path-clean = "0.1.0"
rand = "0.8"
netstat2 = "0.11.1"

# === Networking / HTTP ===
minreq = { version = "2.4", features = ["https-rustls-probe"] }

# === Async runtime ===
tokio = { version = "1.36", features = ["net", "rt-multi-thread", "io-util", "macros", "process", "sync", "time"] }

# === Native crypto / SSH ===
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# === Evasion stack by @Kudaes (https://github.com/Kudaes) ===
dinvoke_rs = { git = "https://github.com/Kudaes/DInvoke_rs", optional = true }  # Indirect syscalls
unwinder = { git = "https://github.com/Kudaes/Unwinder", optional = true }      # Call stack spoofing
shelter = { git = "https://github.com/Kudaes/Shelter", optional = true }         # Sleep obfuscation (ROP + AES)
eclipse = { git = "https://github.com/Kudaes/Eclipse", optional = true }         # Activation Context hijack
mftool = { git = "https://github.com/Kudaes/MFTool", optional = true }           # Direct NTFS reads
puzzle = { git = "https://github.com/Kudaes/Puzzle", optional = true }            # Minifilter evasion

# === Platform-specific dependencies ===
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-acl = "0.1"
wmi = "0.9"

# winapi (scoped to windows target): añadidos los módulos que usamos en los ficheros
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
  "aclapi",
  "errhandlingapi",
  "fileapi",
  "handleapi",
  "heapapi",
  "libloaderapi",
  "impl-default",
  "memoryapi",
  "processthreadsapi",
  "securitybaseapi",
  "synchapi",
  "tlhelp32",
  "winbase",
  "wincon",
  "wincred",
  "winnt",
  "winuser",
  "wow64apiset",
  "sysinfoapi",

  # módulos adicionales necesarios para GDI & utilidades usadas
  "wingdi",
  "combaseapi",
  "minwindef",
  "windef",
  "basetsd",
]
